<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="0dp"
        android:paddingLeft="0dp"
        android:paddingRight="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="0dp"
            android:background="@color/primary_dark">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="0dp"
                android:gravity="center"
                android:text="@string/login"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginBottom="40dp"
            android:background="@color/primary_dark" />

        <ImageView
            android:src="@drawable/logo"
            android:layout_width="wrap_content"
            android:layout_height="98dp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center_horizontal" />

        <!-- TextView abaixo utilizado para
        espaçamento entre linhas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\n\n"
            android:textSize="4dp" />
        <!-- Ou utilizar também: "\n" para espaçamento
        entre uma linha e outra -->

        <!-- Usuário: -->
        <TextView android:text="@string/usuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textSize="20dp"
                android:background="@color/white"
                android:textColor="@color/blue"
                android:gravity="left"
                android:inputType="textEmailAddress"
                android:textCursorDrawable="@drawable/my_cursor" />
        </android.support.design.widget.TextInputLayout>
        <!-- Fim Usuário -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\n\n\n"
            android:textSize="4dp" />

        <!-- Password: -->
        <TextView
            android:text="@string/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:layout_marginLeft="16dp"
            android:textColor="@color/blue"
            android:textSize="16dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:paddingRight="24dp">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="4dp"
                android:textSize="20dp"
                android:background="@color/white"
                android:textColor="@color/blue"
                android:gravity="left"
                android:inputType="textPassword"
                android:textCursorDrawable="@drawable/my_cursor" />
        </android.support.design.widget.TextInputLayout>
        <!-- Fim Password -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\n\n"
            android:textSize="6dp" />

        <!-- Botão Login: -->
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:background="@color/green"
            android:text="Login ➜" />
        <!-- Fim Botão Login -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="\n\n\n"
            android:textSize="4dp" />

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Botão Cadastrar: -->
            <ToggleButton
                android:id="@+id/link_signup"
                android:layout_width="300dp"
                android:layout_height="36dp"
                android:layout_marginRight="200dp"
                android:layout_marginLeft="24dp"
                android:text="ToggleButton"
                android:layout_alignParentLeft="true"
                android:background="@color/primary_dark"
                android:textOff="✚ Cadastrar"
                android:textOn="✚ Cadastrar" />
            <!-- Fim Botão Cadastrar -->

            <!-- Botão QR Code: -->
            <ToggleButton
                android:layout_width="300dp"
                android:layout_height="36dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="200dp"
                android:text="ToggleButton"
                android:layout_alignParentRight="true"
                android:background="@color/green"
                android:textOff="QR Code"
                android:textOn="QR Code" />
            <!-- Fim Botão QR Code -->
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="28dp" />
    </LinearLayout>

</ScrollView>